; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_avr32dci.c_avr32dci_vbus_interrupt.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_avr32dci.c_avr32dci_vbus_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.avr32dci_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i64, i64, i64 }

@.str = private unnamed_addr constant [11 x i8] c"vbus = %u\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @avr32dci_vbus_interrupt(%struct.avr32dci_softc* %0, i64 %1) #0 {
  %3 = alloca %struct.avr32dci_softc*, align 8
  %4 = alloca i64, align 8
  store %struct.avr32dci_softc* %0, %struct.avr32dci_softc** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = call i32 @DPRINTFN(i32 5, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i64 %5)
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %22

9:                                                ; preds = %2
  %10 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %11 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %21, label %15

15:                                               ; preds = %9
  %16 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %17 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32 1, i32* %18, align 8
  %19 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %20 = call i32 @avr32dci_root_intr(%struct.avr32dci_softc* %19)
  br label %21

21:                                               ; preds = %15, %9
  br label %47

22:                                               ; preds = %2
  %23 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %24 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %46

28:                                               ; preds = %22
  %29 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %30 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  store i32 0, i32* %31, align 8
  %32 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %33 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 4
  store i64 0, i64* %34, align 8
  %35 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %36 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 3
  store i64 0, i64* %37, align 8
  %38 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %39 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 2
  store i64 0, i64* %40, align 8
  %41 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %42 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 1
  store i32 1, i32* %43, align 4
  %44 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %3, align 8
  %45 = call i32 @avr32dci_root_intr(%struct.avr32dci_softc* %44)
  br label %46

46:                                               ; preds = %28, %22
  br label %47

47:                                               ; preds = %46, %21
  ret void
}

declare dso_local i32 @DPRINTFN(i32, i8*, i64) #1

declare dso_local i32 @avr32dci_root_intr(%struct.avr32dci_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
